[package]
name = "asr-lso"
version = "0.1.0"
edition = "2024"
description = "AutoSplitter Runtime bridge for LiveSplit one"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", default-features = false, features = [
    "derive",
    "help",
    "std",
    "usage",
] }
livesplit-auto-splitting = { git = "https://github.com/LiveSplit/livesplit-core" }
tungstenite = { version = "0.26.2", features = ["rustls"] }
serde_json = "1.0.140"
serde_derive = "1.0.219"
serde = "1.0.219"
pretty_env_logger = "0.5.0"
log = "0.4.27"
toml = { version = "0.8.22", default-features = false, features = [
    "parse",
    "preserve_order",
] }

[profile.max-opt]
inherits = "release"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[profile.max-opt.build-override]
opt-level = 0
